kafka-ui/kafka-ui-network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: kafka-connect-kafka-ui-network-policy
spec:
  ingress:
  - from:
    - podSelector:
        matchLabels:
          strimzi.io/cluster: connect-cluster
          strimzi.io/kind: KafkaConnect
          strimzi.io/name: connect-cluster-connect
    - namespaceSelector: {}
      podSelector:
        matchLabels:
          app.kubernetes.io/name: kafka-ui
          app.kubernetes.io/instance: kafka-ui
    ports:
    - port: 8083
      protocol: TCP
  podSelector:
    matchLabels:
      strimzi.io/cluster: connect-cluster
      strimzi.io/kind: KafkaConnect
      strimzi.io/name: connect-cluster-connect
  policyTypes:
  - Ingress
